# test-repo

./: index.html  pull-testing.txt  what.txt
test/: Makefile  Makefile.in  combo.txt  config.h  config.status  configure  test  test.glade  thread  users.txt
test/autom4te.cache/: output.0  requests  traces.0  traces.1
test/po/: Makefile  Makefile.in
test/src/: Informative day about EduCaro-Tunisie + partnershi  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  combo.c  combo.h  combo.txt  compiling_error.txt  crud.h  crudbracelet.c  crudclasse.c  crudenfant.c  crudmaitresse.c  crudparent.c  interface.c  interface.c.bak  test  thread  thread.c  verif.c  verif.h
test/src/.deps/: callbacks.Po  combo.Po  crudbracelet.Po  crudclasse.Po  crudenfant.Po  crudmaitresse.Po  crudparent.Po  interface.Po  verif.Po
